<resources>
    <string name="facebook_app_id">2021415534815156</string>
    <string name="app_name">Digital Credit</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="cnic">CNIC</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="submit"><![CDATA[>]]></string>
    <string name="by_login_you_confirm"><![CDATA[By Signing up you confirm that you have read & agree to the our Privacy Policy and Terms & Conditions]]></string>
    <string name="header">Welcome To Digital Credit!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="base_score">Base Score</string>
    <string name="behavior_score">Behavior Score</string>
    <string name="available_limit">Available Limit</string>
    <string name="avail_loan">Avail Loan</string>
    <string name="history">Loan History</string>
    <string name="repayments">Repayments</string>
    <string name="notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tenure">Tenure</string>
    <string name="consumed_amount">Consumed Amount</string>
    <string name="processing_fee">Processing Fee</string>
    <string name="available_balance">Available Balance</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="don_t_have">Don\'t have an account yet?</string>
    <string name="pay">Pay</string>
    <string name="pay_by_cash">Pay By Cash</string>
    <string name="pay_by_loan">Pay By Loan</string>
    <string name="order_history">Order History</string>
    <string name="cart">Cart</string>
    <string name="product_creation">Product Creation</string>
    <string name="wallet_topup">Wallet Topup</string>

</resources>
