<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_loan"
            android:checked="true"
            android:icon="@drawable/home_black"
            android:visible="false"
            android:title="@string/dashboard"/>

        <item
            android:id="@+id/order"
            android:icon="@drawable/order"
            android:visible="false"
            android:title="Order"/>

        <item
            android:id="@+id/order_collection"
            android:icon="@drawable/order"
            android:visible="false"
            android:title="Order Collection"/>

        <item
            android:id="@+id/cart"
            android:icon="@drawable/avail_loan"
            android:visible="false"
            android:title="@string/cart" />
        <item
            android:id="@+id/repayments"
            android:icon="@drawable/repayment"
            android:visible="false"
            android:title="@string/repayments" />
        <item
            android:id="@+id/order_history"
            android:icon="@drawable/history"
            android:visible="false"
            android:title="@string/order_history" />

        <item
            android:id="@+id/avail_history"
            android:icon="@drawable/history"
            android:visible="false"
            android:title="@string/history" />

       <!-- <item
            android:id="@+id/notifications"
            android:icon="@drawable/notification"
            android:title="@string/notifications" />-->

        <item
            android:id="@+id/product_creation"
            android:icon="@drawable/history"
            android:visible="false"
            android:title="@string/product_creation" />

        <item
            android:id="@+id/wallet_topup"
            android:icon="@drawable/history"
            android:visible="false"
            android:title="@string/wallet_topup" />

        <item
            android:id="@+id/order_history_distributor"
            android:icon="@drawable/history"
            android:visible="false"
            android:title="@string/order_history" />
    </group>
        <item android:id="@+id/logout"
            android:title="Logout"/>



</menu>
