<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/login_screen"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/jsbl_logo" />

    <TextView
        android:id="@+id/textViewHead"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-smallcaps"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/heading"
        android:textAlignment="center"
        android:text="@string/header" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewHead"
        android:hint="@string/full_name"
        android:ems="15"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/editTextFullname"
        android:textColor="@android:color/black"
        android:singleLine="true"
        android:inputType="textFilter|textNoSuggestions"
         />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextFullname"
        android:hint="@string/cnic"
        android:ems="15"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewCnic"
        android:textColor="@android:color/background_light"
        android:singleLine="true"
        android:inputType="number"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewCnic"
        android:hint="@string/mobile_no"
        android:ems="15"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/editTextMobileno"
        android:textColor="@android:color/black"
        android:singleLine="true"
        android:inputType="phone"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/submit"
        android:layout_below="@id/editTextMobileno"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="@drawable/button_bg_round"
        android:id="@+id/button"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_login_you_confirm"
        android:layout_alignParentBottom="true"
        android:fontFamily="sans-serif-condensed"
        android:layout_below="@id/button"
        android:gravity="bottom"
        />
</RelativeLayout>