<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/login_screen"
    android:background="@drawable/background_gradient"
    tools:context=".activity.RegisterActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/jsbl_logo" />

<!--
    <TextView
        android:id="@+id/textViewHead"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-smallcaps"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/heading"
        android:textAlignment="center"
        android:text="@string/header" />
-->

    <EditText
        android:id="@+id/editTextFullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif"
        android:ems="15"
        android:maxLength="30"
        android:layout_alignLeft="@id/imageView"
        android:layout_alignRight="@id/imageView"
        android:hint="@string/full_name"
        android:inputType="textFilter|textNoSuggestions|textPersonName"
        android:singleLine="true"
        android:textColor="@android:color/black" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextFullname"
        android:hint="@string/cnic"
        android:ems="15"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/editTextCnic"
        android:layout_alignLeft="@id/imageView"
        android:layout_alignRight="@id/imageView"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif"
        android:singleLine="true"
        android:maxLength="13"
        android:inputType="number"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextCnic"
        android:hint="@string/mobile_no"
        android:ems="15"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/editTextMobileno"
        android:layout_alignLeft="@id/imageView"
        android:layout_alignRight="@id/imageView"
        android:textColor="@android:color/black"
        android:singleLine="true"
        android:maxLength="11"
        android:fontFamily="sans-serif"
        android:inputType="phone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign UP"
        android:layout_below="@id/editTextMobileno"
        android:layout_centerHorizontal="true"
        android:id="@+id/button"
        android:padding="15dp"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/button"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="18dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="bottom"
        android:text="@string/by_login_you_confirm" />
</RelativeLayout>