<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AvailLoanFragment">


         <android.support.v7.widget.CardView
             android:layout_width="350dp"
             android:layout_height="350dp"
             app:cardCornerRadius="5dp"
             android:layout_margin="5dp"
             android:id="@+id/card_view_base"
             android:layout_centerInParent="true"
             app:cardBackgroundColor="#1Affffff">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight=".2"
                   android:padding="5dp"
                   android:textAlignment="textStart"
                   android:fontFamily="sans-serif-smallcaps"
                   android:textStyle="bold"
                   android:textSize="18sp"
                   android:text="@string/available_limit"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight=".7"
                   android:padding="5dp"
                   android:textAlignment="center"
                   android:fontFamily="sans-serif-smallcaps"
                   android:textStyle="bold"
                   android:textSize="18sp"
                   android:id="@+id/textViewAvailablelimit"
                   android:text="Rs. 3000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:weightSum="1">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight=".2"
                   android:padding="5dp"
                   android:textAlignment="textStart"
                   android:fontFamily="sans-serif-smallcaps"
                   android:textStyle="bold"
                   android:textSize="18sp"
                   android:text="@string/tenure"/>

               <Spinner
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight=".7"
                   android:textAlignment="center"
                   android:id="@+id/spinnerTenure"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="60dp"
                android:weightSum="1">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight=".2"
                   android:padding="5dp"
                   android:textAlignment="textStart"
                   android:fontFamily="sans-serif-smallcaps"
                   android:textStyle="bold"
                   android:textSize="18sp"
                   android:text="@string/consumed_amount"/>

               <EditText
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight=".7"
                   android:padding="5dp"
                   android:textAlignment="center"
                   android:fontFamily="sans-serif-smallcaps"
                   android:textStyle="bold"
                   android:textSize="18sp"
                   android:id="@+id/edtTextConsumed"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="90dp"
                android:weightSum="1">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight=".2"
                   android:padding="5dp"
                   android:textAlignment="textStart"
                   android:fontFamily="sans-serif-smallcaps"
                   android:textStyle="bold"
                   android:textSize="18sp"
                   android:text="@string/processing_fee"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight=".7"
                   android:padding="5dp"
                   android:textAlignment="center"
                   android:fontFamily="sans-serif-smallcaps"
                   android:textStyle="bold"
                   android:textSize="18sp"
                   android:text="Rs. 50"
                   android:id="@+id/textViewProcessing"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="120dp"
                android:weightSum="1">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight=".2"
                   android:padding="5dp"
                   android:textAlignment="textStart"
                   android:fontFamily="sans-serif-smallcaps"
                   android:textStyle="bold"
                   android:textSize="18sp"
                   android:text="@string/available_balance"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight=".7"
                   android:padding="5dp"
                   android:textAlignment="center"
                   android:fontFamily="sans-serif-smallcaps"
                   android:textStyle="bold"
                   android:textSize="18sp"
                   android:text="Rs. 2950"
                   android:id="@+id/textViewAvailableBal"/>
            </LinearLayout>


               <Button
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Submit"
                   android:fontFamily="sans-serif-smallcaps"
                   android:textStyle="bold"
                   android:layout_gravity="center_horizontal|bottom"
                   />
         </android.support.v7.widget.CardView>

</RelativeLayout>